applications/syncthing/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: syncthing
  namespace: syncthing
spec:
  parentRefs:
    - name: gateway-internal
      namespace: gateway
      group: gateway.networking.k8s.io
      kind: Gateway
  hostnames:
    - syncthing.quido.me
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: syncthing
          port: 8384
          weight: 1
          group: ""
          kind: Service
